update the services page and update the path

--- a/navbar.html
+++ b/navbar.html
@@ -3,7 +3,7 @@
         <div class="nav-container">
             <div class="nav-logo">
                 <img
-                    src="images/as-infotech-logo.png"
+                    src="/as-infotech-logo.png"
                     alt="AS Infotech Logo"
                     class="logo-image"
                 />
