--- a/services.html
+++ b/services.html
@@ -27,7 +27,7 @@
 
         <!-- services grid -->
         <section class="services-detailed">
-            <div class="container">
+            <div class="container services-grid">
                 <div class="service-item">
                     <div class="service-content">
                         <div class="service-icon-large">
